# contracts

./: .gitignore  .gqlgenc.yml  README.md  compile.sh  go.mod  go.sum  main.go
adapters/bsc/erc721/transfer/: metadata.go
adapters/ethereum/: AnconVerifierBindings.go  abi.go  ics23.go
adapters/ethereum/erc721/transfer/: metadata.go
contracts/metadata/: Cargo.toml
contracts/metadata/src/: contract.rs  host.rs  lib.rs  sdk.rs
functions/: base.go  main.go
functions/myproject/: Cargo.toml  LICENSE_MIT
functions/testapp/: Cargo.toml  witgen.wit
functions/testapp/src/: lib.rs
graphql/client/: client.go
graphql/server/: gqlgen.yml
graphql/server/graph/: schema.graphqls  schema.resolvers.go
playground/mutation/: sample.graphql
scripts/: generateServerModels.sh
sdk/: Makefile  contract.go
sdk/contracts/: contract.go
sdk/durin/: durin.go
testvm/: testvm.go
wasmvm/: codec.go  exported.go  imports.go
